# ComposeKit

./: .gitignore  LICENSE  README.md  generate.py  pyproject.toml  requirements.txt  update.py
.github/workflows/: python-tests.yaml  update-composes.yaml  update-images.yaml
config/: update.yaml
src/composekit/: generate.py  sort.py  update.py
src/composekit/utils/: config.py  oci_api.py
tests/: test_generate.py  test_update.py
utils/: __init__.py  oci_api.py
