[project]
name = "composekit"
version = "1.0.0"
description = "A project to simplify Docker container management."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Farzin Kazemzadeh", email = "itisFarzin@proton.me" }
]
requires-python = ">=3.10"

dependencies = [
  "GitPython>=3.1.46",
  "PyYAML>=6.0.3",
  "httpx>=0.28.1",
  "packaging>=25.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.19.1",
  "pytest>=9.0.2",
  "pytest-sugar>=1.1.1",
  "pytest-asyncio>=1.3.0",
  "types-PyYAML>=6.0.12",
  "ruff>=0.14.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
files = ["src", "tests"]
strict = true
